--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
