--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "framer-motion": "^10.12.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^3.0.1"
