--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "framer-motion": "^10.12.13",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^3.0.1"
   },
